force-app/main/default/objects/HM_Dashboard_Component_Group__c/HM_Dashboard_Component_Group__c.object-meta.xml
<CustomObject>
    <description>Logical grouping of components (represents a row/section)</description>
    <label>Dashboard Component Group</label>
    <nameField>
        <label>Component Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dashboard Component Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>