force-app/main/default/objects/HM_Dashboard_Component_Group__c/fields/HM_Component_Type__c.field-meta.xml
<CustomField>
    <fullName>HM_Component_Type__c</fullName>
    <inlineHelpText>Select the primary type of components in this group. This helps organize components by their visual type. Options: Tile (KPI cards), List (tabular data).</inlineHelpText>
    <label>Component Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tile</fullName>
            </value>
            <value>
                <fullName>List</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>