force-app/main/default/objects/HM_Dashboard_Component_Group__c/fields/HM_Components_Per_Row__c.field-meta.xml
<CustomField>
    <fullName>HM_Components_Per_Row__c</fullName>
    <inlineHelpText>Number of components to display per row. Only applicable for Horizontal and Grid layout types.</inlineHelpText>
    <label>Components Per Row</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>