force-app/main/default/objects/HM_Dashboard_Component_Group__c/fields/HM_Dashboard__c.field-meta.xml
<CustomField>
    <fullName>HM_Dashboard__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Select the parent dashboard this component group belongs to. Leave blank to use this group as a standalone component group that can be added directly to Lightning pages.</inlineHelpText>
    <label>Dashboard</label>
    <referenceTo>HM_Dashboard__c</referenceTo>
    <relationshipLabel>Component Groups</relationshipLabel>
    <relationshipName>Component_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>