force-app/main/default/objects/HM_Dashboard_Component_Group__c/fields/HM_Layout_Type__c.field-meta.xml
<CustomField>
    <fullName>HM_Layout_Type__c</fullName>
    <inlineHelpText>Select how components in this group should be arranged. Horizontal: side-by-side in a row (best for KPI tiles). Vertical: stacked top-to-bottom (best for lists). Grid: multi-column grid layout.</inlineHelpText>
    <label>Layout Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Horizontal</fullName>
                <default>true</default>
                <label>Horizontal</label>
            </value>
            <value>
                <fullName>Vertical</fullName>
            </value>
            <value>
                <fullName>Grid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>