force-app/main/default/objects/HM_Dashboard_Component_Group__c/fields/HM_Max_Components__c.field-meta.xml
<CustomField>
    <fullName>HM_Max_Components__c</fullName>
    <inlineHelpText>Maximum number of components allowed in this group. Useful for enforcing layout constraints. Leave blank for unlimited components.</inlineHelpText>
    <label>Max Components</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>